pipeline/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customerinfo
  name: customerinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customerinfo
  template:
    metadata:
      labels:
        app: customerinfo
    spec:
      containers:
        - image: docker.io/application
          imagePullPolicy: Always
          name: customerinfo
          ports:
            - containerPort: 9080
