pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: customerinfo
  name: customerinfo
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: customerinfo
    weight: 100
